# scrape_kfc_test_work

./: .gitignore  README.md  database.db  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_07_08_1438-006b8363965d_.py  2023_07_09_2157-d6abea920ab5_.py
src/core/: database.py  parse.py  request.py  session.py  settings.py
src/crud/: __init__.py  base.py  city.py  feature.py  store.py  store_feature.py
src/models/: __init__.py  city.py  feature.py  store.py  store_feature.py
src/schemas/: city.py  feature.py  kfc_json.py  store.py  store_feature.py
src/utils/: app_exceptions.py  app_types.py  dsn.py  validators.py
